[3] fixes contact us issue on mobiles

--- a/client/src/styles/scss/layout/nav-bar.scss
+++ b/client/src/styles/scss/layout/nav-bar.scss
@@ -70,11 +70,13 @@ $nav-bar-li: unquote($string: ".nav-bar__ul__li");
             font-size: 1.2rem
         }
 
-        &:hover > a {
+        @media all and (min-width: 620px) {
+          &:hover > a {
             color: c(text-mid);
             @media all and (max-width: 620px) {
                 color: rgb(238, 238, 238);
             }
+         }
         }
 
         >a{
